# agentic-accounts-payable-orchestrator

./: .env.example  .gitignore  =5.0  Dockerfile  README.md  azure.yaml  marimo.toml  pyproject.toml  requirements-day2.txt  requirements-dev.txt  requirements.txt
.devcontainer/: devcontainer.json
adr/: ADR-002_irreversible_actions_and_hitl.md
deploy/: containerapp.yaml
docker/: Dockerfile.api  Dockerfile.worker
docs/: DAY_00_AZURE_BOOTSTRAP.md  DAY_01.md  DAY_01_DATA_FLOW.md  DAY_02.md  DAY_02_STATE_FLOW.md  DAY_03.md  DAY_03_DATA_AUTHORITY.md  DAY_03_EVALUATION.md  DAY_03_FRAMEWORK_SELECTION_AND_CHOICE.md  DAY_03_LIVE_AZURE_RETRIEVAL.md  DAY_03_MULTI_AGENT_RETRIEVAL.md  DAY_04.md  DAY_04_EXECUTION_FLOW.md  DAY_04_EXIT_CHECK.md  DAY_04_EXPLICIT_PLANNING.md  DAY_04_PLAN_SCHEMA.md  DAY_05.md  DAY_05_DURABLE_STATE_AND_RESUMPTION.md  DAY_06.md  DAY_06_REFLECTION_AND_GRACEFUL_REFUSAL.md  DAY_07.md  DAY_07_EVAL_GUARDRAILS_SLICE_GOVERNANCE.md  DAY_08.md  DAY_08_IAC_IDENTITY_RELEASE_OWNERSHIP.md  DAY_09.md  DAY_10.md  DAY_10_DEPLOYMENT_AND_ACCEPTANCE.md  DAY_11.md  DAY_11_DELEGATED_IDENTITY.md  DAY_12.md  DAY_12_PRIVATE_NETWORKING.md  DAY_13.md  DAY_13_INTEGRATION_AND_MCP.md  DAY_14.md  DAY_14_BREAKING_CHANGES.md  TRAINING_JOURNEY.md
evals/: common.py  malicious_cases.jsonl  run_eval_suite.py  score_thresholds.yaml  synthetic_cases.jsonl
fixtures/: README.md
infra/: README.md  core.bicep  core.bicepparam.example  core.json  full.bicep  full.bicepparam.example  full.json  main.bicep  main.bicepparam.example  main.json  notebook.bicep  notebook.bicepparam.example  notebook.json  notebook.parameters.json  notebook_advanced.bicep  notebook_full.bicep  notebook_standard.bicep
notebooks/: day1_intake_and_canonicalization.ipynb  day1_intake_canonicalization.py  day2_stateful_workflow_orchestration.ipynb  day3_multi_agent_retrieval_and_authority.ipynb  day3_retrieval_authority.py  day4_explicit_planning_and_controlled_execution.ipynb  day5_durable_state_and_resumption.ipynb  day6_policy_review.py  day8_observability.py  day_0_bootstrap_incident.py  day_10_production_operations.py  day_11_delegated_identity_obo.py  day_12_private_networking_constraints.py  day_13_integration_boundary_and_mcp.py  day_14_breaking_changes_elite_ops.py  day_1_agentic_fundamentals.py  day_2_requirements_architecture.py  day_3_azure_ai_services.py  day_4_single_agent_loops.py  day_5_multi_agent_orchestration.py  day_6_data_ml_integration.py  day_7_testing_eval_guardrails.py  day_8_cicd_iac_deployment.py  day_9_scaling_monitoring_cost.py
old_notebooks/: day0_azure_bootstrap.py  day10_deployment_gates.py  day2_stateful_workflow.py  day4_explicit_planning.py  day5_durable_state.py  day7_security_identity.py  day9_cost_routing.py
runbooks/: dlq_runbook.md  (+3 more)
(+694 files in other folders)
